proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/oop_nested_for.py
# Test that you can't define a class in a for loop.
for x in range(2):
    class ForClass:
        def __init__(self):
            print "I am for"
    print x
